# python-client-ai-product-data-enhancer

./: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
aiproductdataenhancer/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: AiProductDataEnhancerApi.md  AiproductdataenhancerDataToTranslate.md  AiproductdataenhancerError.md  AiproductdataenhancerFillProductDataCheckRequest.md  AiproductdataenhancerFillProductDataCheckResponse.md  AiproductdataenhancerFillProductDataRequest.md  AiproductdataenhancerFillProductDataResponse.md  AiproductdataenhancerGenerateProductDataRequest.md  AiproductdataenhancerGenerateProductDataRequestProductInformation.md  AiproductdataenhancerGenerateProductDataResponse.md  AiproductdataenhancerJobStatus.md  AiproductdataenhancerLanguageCode.md  AiproductdataenhancerProductDataToFill.md  AiproductdataenhancerProductInformation.md  AiproductdataenhancerTone.md  AiproductdataenhancerToneType.md  AiproductdataenhancerTranslateDataRequest.md  AiproductdataenhancerTranslateDataResponse.md  GenerateProductDataRequestProductDataToGenerate.md  ProductInformationImageInfo.md  ProductInformationTextInfo.md
test/: test_ai_product_data_enhancer_api.py  test_aiproductdataenhancer_data_to_translate.py  test_aiproductdataenhancer_error.py  test_aiproductdataenhancer_fill_product_data_check_request.py  test_aiproductdataenhancer_fill_product_data_check_response.py  test_aiproductdataenhancer_fill_product_data_request.py  test_aiproductdataenhancer_job_status.py  (+16 more)
(+26 files in other folders)
